--- a/8/style.css
+++ b/8/style.css
@@ -1,7 +1,6 @@
 body {
-    background-color:white;
+    background-color:paleturquoise;
 }
-
 #popup_background {
     width:100%;
     height:100%;
